@@ -5,10 +5,11 @@
 # or the GNU Library General Public License (LGPL) version 2 or later
 # <http://www.gnu.org/copyleft/lgpl.html>
 #
-# $Id: t_htdig_local,v 1.6 2003/06/27 20:28:44 nealr Exp $
+# $Id: t_htdig_local,v 1.7 2003/09/27 06:53:29 lha Exp $
 #
 
-. ./test_functions --start-apache
+test_functions_action=--start-apache
+. ./test_functions
 
 #test for local-file-system access to <http://...> URLs
 
@@ -86,4 +87,5 @@ $got"
 
 fi
 
-. ./test_functions --stop-apache
+test_functions_action=--stop-apache
+. ./test_functions
